--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -8,16 +8,21 @@
         </a>
         <div class="right menu">
             <div class="ui simple dropdown item">
-            Account <i class="dropdown icon"></i>
-            <div class="menu">
-                <a class="item">Logout</a>
-                <%= link_to "Log in", login_path, class: "item" %>
-                <a class="item">Sign Up</a>
+                Account <i class="dropdown icon"></i>
+                <div class="menu">
+                <% if logged_in? %>
+                    <%= link_to "Logout", logout_path, method: :delete, class: "item" %> 
+                <% else %>
+                    <%= link_to "Log in", login_path, class: "item" %>
+                <% end %>
             </div>
-            </div>
+        </div>
+
+        <% if !logged_in? %>
             <div class="item">
-                <div class="ui primary button">Sign Up</div>
+                <%= link_to "Log in", login_path, class: "ui primary button" %>
             </div>
+        <% end %>
         </div>
     </div>
 </div>
