--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,6 +17,7 @@
   <%= render 'layouts/navigation' %>
 
   <div class="ui container">
+    <%= render 'layouts/messages' %>
     <%= yield %>
   </div> 
 
